<resources>
    <string name="app_name">My Music Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="image">image</string>
    <string name="todo">TODO</string>
    <string name="artists">Artists</string>
    <string name="_0_00">0:00</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="album">Playlist</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="edm">EDM</string>
    <string name="romance">Romance</string>
    <string name="party">Party</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="information">Information</string>
    <string name="duration">Duration</string>
    <string name="searchVal">Search</string>
    <string name="ascenting">Ascending</string>
    <string name="descending">Descending</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="katy_perry">Katy Perry</string>
    <string name="the_weeknd">The Weeknd</string>
    <string name="name">Name</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="enter_name_of_the_album">Enter name of the playlist</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="playlists">Playlists</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="enter_the_new_name_for_the_playlist">Enter the new name for the playlist</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="no_results_found">No Results found</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="album1">Album</string>
    <string name="queue">Queue</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="play_next">Play next</string>
    <string name="favourites">Favourites</string>
    <string name="edit_account_details">Personal Details</string>
    <string name="no_playlists_available">No Playlists available</string>
    <string name="no_songs_in_queue">No songs in queue</string>
    <string name="ztunes">ZTunes</string>
    <string name="all_songs">All songs</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="like_any_song_to_add_here">Like any song to add here</string>
    <string name="enter_the_new_name">Enter the new name</string>
    <string name="add_playlists_here_to_view">Add playlists here to view</string>
    <string name="no_songs_available">No Songs available</string>
    <string name="pop">Pop</string>
    <string name="genre">Genre</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_next">Up Next</string>
    <string name="next_in_queue">Next in Queue</string>
    <string name="no_songs_in_the_playlist">No Songs in the playlist</string>
    <string name="lets_find_some_songs_for_you">Lets find some songs for you</string>
    <string name="add_songs">Search songs</string>
    <string name="personal_details">Personal Details</string>
</resources>