<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".fragments.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPwd"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/name"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/tertiary_text_light"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/tertiary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etMob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/tertiary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etConfirmPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/tertiary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPwd"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/tertiary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMob"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>