<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:id="@+id/dialog_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/rename_playlist"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/custom_tint_light"
        android:hint="@string/enter_the_new_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/dull"
        android:textSize="18sp"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintWidth_percent="0.8" />

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/okButton"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="50dp"-->

<!--        android:layout_marginStart="40dp"-->
<!--        android:backgroundTint="@color/custom_tint_light"-->
<!--        android:contentDescription="@string/todo"-->
<!--        app:cardCornerRadius="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"-->

<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/cancelButton"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

            <TextView
    android:id="@+id/okButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:text="@string/ok"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/cancelButton"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--    </androidx.cardview.widget.CardView>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/cancelButton"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:backgroundTint="@color/custom_tint_light"-->
<!--        android:contentDescription="@string/todo"-->
<!--        app:cardCornerRadius="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel"
        android:textColor="@color/custom_tint_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/okButton" />

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--    </androidx.cardview.widget.CardView>-->




</androidx.constraintlayout.widget.ConstraintLayout>