<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">





    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPwd"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/email"
            android:textColorHint="@android:color/tertiary_text_light"
            android:textSize="15sp"
            android:background="@drawable/edit_text_bg"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:textColorHint="@android:color/tertiary_text_light"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/forget_password"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/etPwd"-->
<!--            app:layout_constraintHorizontal_bias="1"-->
<!--            app:layout_constraintStart_toStartOf="@+id/etPwd"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/etPwd"-->
<!--            app:layout_constraintVertical_bias="0" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>

