<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_"
    tools:context=".fragments.EditDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_dialog_parent"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/edit_account_details"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintTextColor="@color/custom_tint_light"
            app:boxStrokeColor="@color/custom_tint_light"
            app:boxStrokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".8"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/custom_tint_light"
                android:textColorHint="@color/custom_tint_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldMobile"
            android:textCursorDrawable="@null"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            app:hintTextColor="@color/custom_tint_light"
            app:boxStrokeColor="@color/custom_tint_light"
            app:boxStrokeWidth="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldName"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".8"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/custom_tint_light"
                android:textColorHint="@color/custom_tint_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/okButton"-->
        <!--            android:layout_width="90dp"-->
        <!--            android:layout_height="50dp"-->

        <!--            android:layout_marginStart="40dp"-->
        <!--            android:backgroundTint="@color/custom_tint_light"-->
        <!--            android:contentDescription="@string/todo"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/cancelButton"-->

        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/cancelButton"-->
        <!--            tools:ignore="MissingConstraints">-->

        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent">-->

        <TextView
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldMobile"
            app:layout_constraintVertical_bias="1" />


        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


        <!--        </androidx.cardview.widget.CardView>-->

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/cancelButton"-->
        <!--            android:layout_width="90dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:layout_marginEnd="40dp"-->
        <!--            android:backgroundTint="@color/custom_tint_light"-->
        <!--            android:contentDescription="@string/todo"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent">-->

        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent">-->

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/custom_tint_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/okButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/okButton"
            app:layout_constraintTop_toTopOf="@+id/okButton"
            app:layout_constraintVertical_bias="0.504" />

        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


        <!--        </androidx.cardview.widget.CardView>-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

